# hr-toolkit

./: .gitattributes  .gitignore  README.md  hr_toolkit_app.py  hr_toolkit_updater.py  package-lock.json  package.json  pyproject.toml  requirements.txt  二期问题汇总表.xlsx  问题汇总.xlsx
.github/workflows/: ci.yml  gitee-release.yml  gitee-sync.yml  release.yml
docs/: codex_hr_tool_development_guide.md
hr_toolkit/: __init__.py  __main__.py  _icon_data.py  app_update.py  cli.py  gui.py  runlog.py  runtime_checks.py  update_runner.py
release/: latest.json  latest.json.example  update_url.txt.example
scripts/: build_macos.py  build_update_assets.py  build_windows.py  build_windows_installers.py  bump_version.py  generate_app_icons.py  generate_release_metadata.py  prepare_gitee_release.py  publish_gitee_release.py  release.py  release_windows.py  verify_macos_bundle.py  versioning.py
tests/: test_app_icons.py  test_app_update.py  test_archive_import.py  test_data_statistics.py  test_excel_helpers.py  test_folder_rename.py  test_gitee_mirror.py  test_gui_progress.py  test_inputs.py  test_insurance_ledger.py  test_personnel_change_merge.py  test_prepare_gitee_release.py  test_release.py  test_release_metadata.py  test_runlog.py  test_runtime_checks.py  test_salary_merge.py  test_salary_split.py  test_social_security.py  test_versioning.py  test_windows_packaging.py
附件/: 问题1-社保明细表模板.xlsx  问题1-社保汇总表模板.xlsx  问题2-考勤、周月报汇总表模板.xlsx  问题3-保险台账.xlsx  问题4-薪资表模板(1).xlsx  问题5-个人薪资汇总表模板.xlsx  问题6-2026年4月人力资源分析表（模板）.xlsx  问题6-2026年4月异动汇总表（模板）.xlsx  问题7-人事档案移交表.xls  问题7-档案表汇总最终(岩亨）-模板.xls
(+35 files in other folders)
